Added functionality
