# openapi.yaml
@@ -1,37 +1,5 @@
 components:
   schemas:
-    Greeting:
-      description: A container storing a greeting for a specfic person incl. metadata
-      properties:
-        created_at:
-          description: The date/time when the message was created
-          format: date-time
-          title: Created At
-          type: string
-        isinformal:
-          description: Is the expression used in informal contexts?
-          title: Isinformal
-          type: boolean
-        language:
-          description: The language.
-          enum:
-          - Greek
-          - Croatian
-          - French
-          - German
-          title: Language
-          type: string
-        message:
-          description: The message content.
-          title: Message
-          type: string
-      required:
-      - message
-      - created_at
-      - language
-      - isinformal
-      title: Greeting
-      type: object
     HTTPValidationError:
       properties:
         detail:
@@ -40,6 +8,35 @@ components:
           title: Detail
           type: array
       title: HTTPValidationError
+      type: object
+    HttpAuthorizationFailedError:
+      additionalProperties: false
+      description: A custom exception body model.
+      properties:
+        data:
+          $ref: '#/components/schemas/HttpAuthorizationFailedErrorData'
+        description:
+          description: A human readable message to the client explaining the cause
+            of the exception.
+          title: Description
+          type: string
+        exception_id:
+          enum:
+          - authorizationFailedError
+          title: Exception Id
+          type: string
+      required:
+      - data
+      - description
+      - exception_id
+      title: HttpAuthorizationFailedError
+      type: object
+    HttpAuthorizationFailedErrorData:
+      description: 'An empty model used as default for describing exception data.
+
+        Please overwrite this to define your own data model.'
+      properties: {}
+      title: HttpAuthorizationFailedErrorData
       type: object
     ValidationError:
       properties:
@@ -63,51 +60,62 @@ components:
       title: ValidationError
       type: object
 info:
-  title: FastAPI
+  description: A service exposing an external API to commission file deletionsfrom
+    the wholefile backend.
+  title: Purge Controller Service
   version: 0.1.0
 openapi: 3.0.2
 paths:
-  /:
-    get:
-      description: Greet the World
-      operationId: index__get
+  /files/{file_id}:
+    delete:
+      description: Send out an event to delete the file with the given id.
+      operationId: deleteFile
+      parameters:
+      - in: path
+        name: file_id
+        required: true
+        schema:
+          title: File Id
+          type: string
       responses:
-        '200':
+        '202':
           content:
             application/json:
               schema: {}
-          description: Successful Response
-      summary: Greet the world
-  /greet/{name}:
-    get:
-      description: Greet a person by name. You may choose a formal or an informal
-        greeting.The language for the greeting is configured in the backend.
-      operationId: greet_greet__name__get
-      parameters:
-      - in: path
-        name: name
-        required: true
-        schema:
-          title: Name
-          type: string
-      - in: query
-        name: isinformal
-        required: false
-        schema:
-          default: true
-          title: Isinformal
-          type: boolean
-      responses:
-        '200':
+          description: Commissioned file deletion
+        '403':
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Greeting'
-          description: Successful Response
+                $ref: '#/components/schemas/HttpAuthorizationFailedError'
+          description: 'Bearer token could not be validated.
+
+            Exceptions by ID:
+
+            - authorizationFailedError: Bearer token could not be validated.'
         '422':
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
-      summary: Greet a person
+      summary: Deletes the corresponding file.
+      tags:
+      - PurgeControllerService
+  /health:
+    get:
+      description: Used to test if this service is alive
+      operationId: health_health_get
+      responses:
+        '200':
+          content:
+            application/json:
+              schema: {}
+          description: Successful Response
+      summary: health
+      tags:
+      - PurgeControllerService
+servers:
+- url: /
+tags:
+- name: PurgeControllerService
